thanos-prometheus-ha/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitor
spec:
  rules:
  - host: grafana.chebai.org
    http:
      paths:
      - path: 
        backend:
          serviceName: grafana
          servicePort: 3000
